[gd_scene load_steps=8 format=3 uid="uid://b086ccabwcnx4"]

[ext_resource type="Script" path="res://scenes/nav.gd" id="1_aj5j6"]
[ext_resource type="Script" path="res://addons/LPCAnimatedSprite/LPCAnimatedSprite2D.gd" id="2_cnj2d"]
[ext_resource type="Texture2D" uid="uid://cyuhvw6e6rj4w" path="res://assets/Download6088.png" id="3_kwlep"]
[ext_resource type="Script" path="res://addons/LPCAnimatedSprite/LPCSpriteSheet.gd" id="4_sgoj8"]

[sub_resource type="Resource" id="Resource_sn43d"]
script = ExtResource("4_sgoj8")
SpriteSheet = ExtResource("3_kwlep")
Name = "suited"

[sub_resource type="CircleShape2D" id="CircleShape2D_6lp6x"]
radius = 5.09902

[sub_resource type="CircleShape2D" id="CircleShape2D_qodci"]
radius = 14.0357

[node name="nav" type="CharacterBody2D"]
z_index = 1
y_sort_enabled = true
position = Vector2(0, 1)
collision_layer = 3
script = ExtResource("1_aj5j6")

[node name="LPCAnimatedSprite2D" type="Node2D" parent="."]
z_index = 1
script = ExtResource("2_cnj2d")
SpriteSheets = [SubResource("Resource_sn43d")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 13)
shape = SubResource("CircleShape2D_6lp6x")

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 7)
shape = SubResource("CircleShape2D_qodci")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 350
limit_bottom = 236
limit_smoothed = true
rotation_smoothing_enabled = true

[node name="Attack_Cool_Down" type="Timer" parent="."]

[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered" flags=18]
[connection signal="body_exited" from="hitbox" to="." method="_on_hitbox_body_exited" flags=18]
[connection signal="timeout" from="Attack_Cool_Down" to="." method="_on_attack_cool_down_timeout" flags=18]
